--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-dnd": "^7.4.5",
     "react-dnd-html5-backend": "^7.4.4",
+    "react-dnd-touch-backend": "^0.8.3",
     "react-dom": "^16.8.6",
     "react-inlinesvg": "^0.8.4",
     "react-redux": "^7.0.2",
